diesel_compile_tests/tests/fail/derive_deprecated/deprecated_belongs_to.stderr
error: unexpected end of input, expected parentheses
       help: The correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:29:3
   |
29 | #[belongs_to]
   |   ^^^^^^^^^^

error: expected parentheses
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:36:14
   |
36 | #[belongs_to = Bar]
   |              ^

error: unexpected end of input, expected identifier
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:43:13
   |
43 | #[belongs_to()]
   |             ^^

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:50:14
   |
50 | #[belongs_to("what")]
   |              ^^^^^^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:57:14
   |
57 | #[belongs_to(parent)]
   |              ^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:64:20
   |
64 | #[belongs_to(parent())]
   |                    ^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:71:23
   |
71 | #[belongs_to(parent = 1)]
   |                       ^

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:78:23
   |
78 | #[belongs_to(parent = "1")]
   |                       ^^^

error: expected `foreign_key`
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:92:19
   |
92 | #[belongs_to(Bar, what)]
   |                   ^^^^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(belongs_to(Foo, foreign_key = foo_id))]`
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:99:19
   |
99 | #[belongs_to(Bar, foreign_key)]
   |                   ^^^^^^^^^^^

error: expected string literal
   --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:106:33
    |
106 | #[belongs_to(Bar, foreign_key = 1)]
    |                                 ^

error: expected identifier
   --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:113:33
    |
113 | #[belongs_to(Bar, foreign_key = "1")]
    |                                 ^^^

error: attribute value must be a literal
  --> tests/fail/derive_deprecated/deprecated_belongs_to.rs:36:16
   |
36 | #[belongs_to = Bar]
   |                ^^^
